# langchain-poc

./: .env.example  .gitignore  BLUEPRINT.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: docker-compose-ci.yml  test-ci.yml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base_agent.py  kb_agent.py  odoo_api_agent.py  supervisor.py  workflow_agent.py
app/api/: __init__.py  schemas.py
app/knowledge_base/: __init__.py  embeddings.py  ingestor.py  retriever.py  vector_store.py
app/memory/: __init__.py  session_store.py  workflow_log.py
app/odoo/: __init__.py  auth.py  client.py
app/tools/: __init__.py  kb_tools.py  odoo_activity_tools.py  odoo_crm_tools.py  odoo_partner_tools.py  odoo_pipeline_tools.py  workflow_tools.py
app/utils/: __init__.py  language.py  logger.py
app/workflows/: __init__.py  base_workflow.py  customer_onboarding.py  lead_qualification.py  lost_lead_recovery.py  opportunity_follow_up.py  registry.py
docker/: docker-compose.test-odoo.yml  docker-compose.yml
frontend/: chat.js  index.html  style.css
knowledge_base/faq/: api_troubleshooting.md  crm_common_questions.md
knowledge_base/odoo_crm/: 01_crm_overview.md  02_pipeline_management.md  03_leads_and_opportunities.md  04_activities_and_follow_ups.md  05_reporting_and_forecasting.md  06_email_marketing_integration.md  07_team_management.md  08_crm_api_reference.md  09_crm_automation_rules.md
scripts/: ingest_knowledge_base.py  seed_test_data.py  test_odoo_connection.py
tests/: __init__.py
(+25 files in other folders)
